@@ -5,7 +5,7 @@ import com.newrelic.api.agent.Token;
 import gov.cms.ab2d.bfd.client.BFDClient;
 import gov.cms.ab2d.common.model.Contract;
 import gov.cms.ab2d.eventlogger.LogManager;
-import gov.cms.ab2d.filter.FilterOutByDate;
+import gov.cms.ab2d.filter.FilterOutByDate.DateRange;
 import gov.cms.ab2d.worker.adapter.bluebutton.ContractBeneficiaries;
 import gov.cms.ab2d.worker.processor.domainmodel.PatientClaimsRequest;
 import lombok.extern.slf4j.Slf4j;
@@ -31,9 +31,7 @@ import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
-import java.util.Date;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
 import java.util.concurrent.ExecutionException;
 
 import static org.hamcrest.CoreMatchers.startsWith;
@@ -57,6 +55,7 @@ public class PatientClaimsProcessorUnitTest {
     File tmpEfsMountDir;
 
     private ExplanationOfBenefit eob;
+    private Map<String, ContractBeneficiaries.PatientDTO> patientPTOMap;
     private String patientId = "1234567890";
 
     private OffsetDateTime earlyAttDate = OffsetDateTime.of(1970, 1, 1, 0, 0, 0, 0, ZoneOffset.UTC);
@@ -94,13 +93,21 @@ public class PatientClaimsProcessorUnitTest {
                 fhirContext,
                 eventLogger
         );
+
         ReflectionTestUtils.setField(cut, "startDate", "01/01/1900");
 
         eob = EobTestDataUtil.createEOB();
         createOutputFiles();
         patientDTO = new ContractBeneficiaries.PatientDTO();
         patientDTO.setPatientId(patientId);
-        patientDTO.setDateRangesUnderContract(List.of(new FilterOutByDate.DateRange(new Date(0), new Date())));
+        patientDTO.setDateRangesUnderContract(List.of(new DateRange(new Date(0), new Date())));
+
+        patientPTOMap = new HashMap<>();
+        patientPTOMap.put(patientId, patientDTO);
+        ContractBeneficiaries.PatientDTO fileDTO = new ContractBeneficiaries.PatientDTO();
+        fileDTO.setPatientId("-199900000022040");
+        fileDTO.setDateRangesUnderContract(Collections.singletonList(new DateRange(new Date(0), new Date())));
+        patientPTOMap.put(fileDTO.getPatientId(), fileDTO);
 
         Contract contract = new Contract();
         StreamHelper helper = new TextStreamHelperImpl(tmpEfsMountDir.toPath(), contract.getContractNumber(),
@@ -111,38 +118,87 @@ public class PatientClaimsProcessorUnitTest {
     }
 
     @Test
+    void process_whenPatientInEOBIsNotInContract() throws ParseException {
+        Bundle bundle1 = EobTestDataUtil.createBundle(eob.copy());
+        ExplanationOfBenefit eob = (ExplanationOfBenefit) bundle1.getEntry().get(0).getResource();
+        eob.getPatient().setReference("Patient/BADPATID");
+        List<Resource> resources = cut.extractResources(bundle1.getEntry(),
+                List.of(new DateRange(new Date(0), new Date())), OffsetDateTime.now().minusYears(10),
+                patientPTOMap);
+        assertEquals(resources.size(), 0);
+    }
+
+    @Test
+    void process_whenPatientInEOBIsNotInContract2() throws ParseException {
+        // Empty the patient list
+        Bundle bundle1 = EobTestDataUtil.createBundle(eob.copy());
+        patientPTOMap.clear();
+        List<Resource> resources = cut.extractResources(bundle1.getEntry(),
+                List.of(new DateRange(new Date(0), new Date())), OffsetDateTime.now().minusYears(10),
+                patientPTOMap);
+        assertEquals(resources.size(), 0);
+
+        // Enter an invalid patient list
+        ContractBeneficiaries.PatientDTO badPatient = new ContractBeneficiaries.PatientDTO();
+        badPatient.setPatientId("BADPATID");
+        badPatient.setDateRangesUnderContract(List.of(new DateRange(new Date(0), new Date())));
+        patientPTOMap.put("BADPATID", badPatient);
+        resources = cut.extractResources(bundle1.getEntry(),
+                List.of(new DateRange(new Date(0), new Date())), OffsetDateTime.now().minusYears(10),
+                patientPTOMap);
+        assertEquals(resources.size(), 0);
+
+        // Add a correct patient and verify it comes over
+        ContractBeneficiaries.PatientDTO goodPatient = new ContractBeneficiaries.PatientDTO();
+        String goodPatientId = "-199900000022040";
+        goodPatient.setPatientId(goodPatientId);
+        goodPatient.setDateRangesUnderContract(List.of(new DateRange(new Date(0), new Date())));
+        assertEquals(resources.size(), 0);
+        patientPTOMap.put(goodPatientId, goodPatient);
+        resources = cut.extractResources(bundle1.getEntry(),
+                List.of(new DateRange(new Date(0), new Date())), OffsetDateTime.now().minusYears(10),
+                patientPTOMap);
+        assertEquals(resources.size(), 1);
+    }
+
+    @Test
     void process_whenPDPhasAttestedBeforeBeginDate() throws ParseException {
         // Set the earliest date to Jan 1
         Bundle bundle1 = EobTestDataUtil.createBundle(eob.copy());
         ReflectionTestUtils.setField(cut, "startDate", "01/01/2020");
         // Attestation time is 10 years ago, eob date is 01/02/2020
         List<Resource> resources = cut.extractResources(bundle1.getEntry(),
-                List.of(new FilterOutByDate.DateRange(new Date(0), new Date())), OffsetDateTime.now().minusYears(10));
+                List.of(new DateRange(new Date(0), new Date())), OffsetDateTime.now().minusYears(10),
+                patientPTOMap);
         assertEquals(1, resources.size());
         // Set the billable date to 1970 and attestation date to 1920, should return no results
         ExplanationOfBenefit eob = (ExplanationOfBenefit) bundle1.getEntry().get(0).getResource();
         eob.getBillablePeriod().setStart(new Date(10));
         eob.getBillablePeriod().setEnd(new Date(10));
         resources = cut.extractResources(bundle1.getEntry(),
-                List.of(new FilterOutByDate.DateRange(new Date(0), new Date())), OffsetDateTime.now().minusYears(100));
+                List.of(new DateRange(new Date(0), new Date())), OffsetDateTime.now().minusYears(100),
+                patientPTOMap);
         assertEquals(0, resources.size());
         // Set billable date to late year and attestation date to a hundred years ago, shouldn't return results
         SimpleDateFormat sdf = new SimpleDateFormat("MM/dd/yyyy");
         eob.getBillablePeriod().setStart(sdf.parse("12/29/2019"));
         eob.getBillablePeriod().setEnd(sdf.parse("12/30/2019"));
         resources = cut.extractResources(bundle1.getEntry(),
-                List.of(new FilterOutByDate.DateRange(new Date(0), new Date())), OffsetDateTime.now().minusYears(100));
+                List.of(new DateRange(new Date(0), new Date())), OffsetDateTime.now().minusYears(100),
+                patientPTOMap);
         assertEquals(0, resources.size());
         // Set billable period to early 2020, attestation date in 2019, should return 1
         eob.getBillablePeriod().setStart(sdf.parse("01/02/2020"));
         eob.getBillablePeriod().setEnd(sdf.parse("01/03/2020"));
         resources = cut.extractResources(bundle1.getEntry(),
-                List.of(new FilterOutByDate.DateRange(new Date(0), new Date())), OffsetDateTime.of(2019, 1, 1,
-                        1, 1, 1, 1, ZoneOffset.UTC));
+                List.of(new DateRange(new Date(0), new Date())), OffsetDateTime.of(2019, 1, 1,
+                        1, 1, 1, 1, ZoneOffset.UTC),
+                patientPTOMap);
         assertEquals(1, resources.size());
         // billable period is early 2020, attestation date is today, should return 0
         resources = cut.extractResources(bundle1.getEntry(),
-                List.of(new FilterOutByDate.DateRange(new Date(0), new Date())), OffsetDateTime.now());
+                List.of(new DateRange(new Date(0), new Date())), OffsetDateTime.now(),
+                patientPTOMap);
         assertEquals(0, resources.size());
     }
 
@@ -151,7 +207,7 @@ public class PatientClaimsProcessorUnitTest {
         Bundle bundle1 = EobTestDataUtil.createBundle(eob.copy());
         when(mockBfdClient.requestEOBFromServer(patientId, request.getAttTime())).thenReturn(bundle1);
 
-        cut.process(request).get();
+        cut.process(request, patientPTOMap).get();
 
         verify(mockBfdClient).requestEOBFromServer(patientId, request.getAttTime());
         verify(mockBfdClient, never()).requestNextBundleFromServer(bundle1);
@@ -167,7 +223,7 @@ public class PatientClaimsProcessorUnitTest {
         when(mockBfdClient.requestEOBFromServer(patientId, request.getAttTime())).thenReturn(bundle1);
         when(mockBfdClient.requestNextBundleFromServer(bundle1)).thenReturn(bundle2);
 
-        cut.process(request).get();
+        cut.process(request, patientPTOMap).get();
 
         verify(mockBfdClient).requestEOBFromServer(patientId, request.getAttTime());
         verify(mockBfdClient).requestNextBundleFromServer(bundle1);
@@ -179,7 +235,7 @@ public class PatientClaimsProcessorUnitTest {
         when(mockBfdClient.requestEOBFromServer(patientId, request.getAttTime())).thenThrow(new RuntimeException("Test Exception"));
 
         var exceptionThrown = assertThrows(ExecutionException.class,
-                () -> cut.process(request).get());
+                () -> cut.process(request, patientPTOMap).get());
 
         assertThat(exceptionThrown.getCause().getMessage(), startsWith("Test Exception"));
 
@@ -192,7 +248,7 @@ public class PatientClaimsProcessorUnitTest {
         Bundle bundle1 = new Bundle();
         when(mockBfdClient.requestEOBFromServer(patientId, request.getAttTime())).thenReturn(bundle1);
 
-        cut.process(request).get();
+        cut.process(request, patientPTOMap).get();
 
         verify(mockBfdClient).requestEOBFromServer(patientId, request.getAttTime());
         verify(mockBfdClient, never()).requestNextBundleFromServer(bundle1);
@@ -204,7 +260,7 @@ public class PatientClaimsProcessorUnitTest {
         // Override default behavior of setup
         patientDTO = new ContractBeneficiaries.PatientDTO();
         patientDTO.setPatientId(patientId);
-        patientDTO.setDateRangesUnderContract(List.of(new FilterOutByDate.DateRange(new Date(0), new Date())));
+        patientDTO.setDateRangesUnderContract(List.of(new DateRange(new Date(0), new Date())));
 
         Contract contract = new Contract();
         StreamHelper helper = new TextStreamHelperImpl(tmpEfsMountDir.toPath(), contract.getContractNumber(),
@@ -218,7 +274,7 @@ public class PatientClaimsProcessorUnitTest {
         Bundle bundle1 = EobTestDataUtil.createBundle(eob.copy());
         when(mockBfdClient.requestEOBFromServer(patientId, request.getSinceTime())).thenReturn(bundle1);
 
-        cut.process(request).get();
+        cut.process(request, patientPTOMap).get();
 
         verify(mockBfdClient).requestEOBFromServer(patientId, request.getSinceTime());
         verify(mockBfdClient, never()).requestNextBundleFromServer(bundle1);
@@ -230,7 +286,7 @@ public class PatientClaimsProcessorUnitTest {
         // Override default behavior of setup
         patientDTO = new ContractBeneficiaries.PatientDTO();
         patientDTO.setPatientId(patientId);
-        patientDTO.setDateRangesUnderContract(List.of(new FilterOutByDate.DateRange(new Date(0), new Date())));
+        patientDTO.setDateRangesUnderContract(List.of(new DateRange(new Date(0), new Date())));
 
         Contract contract = new Contract();
         StreamHelper helper = new TextStreamHelperImpl(tmpEfsMountDir.toPath(), contract.getContractNumber(),
@@ -242,7 +298,7 @@ public class PatientClaimsProcessorUnitTest {
         Bundle bundle1 = EobTestDataUtil.createBundle(eob.copy());
         when(mockBfdClient.requestEOBFromServer(patientId, null)).thenReturn(bundle1);
 
-        cut.process(request).get();
+        cut.process(request, patientPTOMap).get();
 
         verify(mockBfdClient).requestEOBFromServer(patientId, null);
         verify(mockBfdClient, never()).requestNextBundleFromServer(bundle1);
